deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fancy-portfolio-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fancy-portfolio
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fancy-portfolio
    spec:
      containers:
        - image: gcr.io/jakub-skoneczny-portfolio-pwa/fancy-portfolio:1.0.0
          imagePullPolicy: Always
          name: fancy-portfolio
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: fancy-portfolio-service
spec:
  type: NodePort
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app: fancy-portfolio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fancy-portfolio-ingress
  annotations:
    networking.gke.io/managed-certificates: fancy-portfolio-certificate
spec:
  backend:
    serviceName: fancy-portfolio-service
    servicePort: 3003
